--- a/README.org
+++ b/README.org
@@ -1,15 +1,13 @@
 Publication-quality graphics for casual useRs
 
 Note that if you are viewing this on github then there are several
-broken links below. To fix that, clone the repository, execute =make=
-in the =HOCKING-graphics-tutorial= directory, and then open
-=README.org= in emacs and do =C-c C-e b= (or =M-x
-org-export-to-html=).
+broken links below. To fix that, clone the repository and execute
+=make= (you will need R, pdflatex, and emacs).
 
 ** Motivation
 
 There are many features in R that make it ideal for making
-[[file:HOCKING-graphics-tutorial/HOCKING-graphics-tutorial.pdf][publication-quality graphics such as the figures shown in this
+[[file:HOCKING-graphics-tutorial.pdf][publication-quality graphics such as the figures shown in this
 sample PDF]]. However, many machine learning researchers are more
 familiar with MATLAB than R.
 
@@ -31,10 +29,10 @@ Second 20 minutes: I will highlight the examples shown below and
 Last 20 minutes: if you would like me to show you how to plot your own
 data, please prepare a CSV file such as the ones shown.
 
-| Plot                                                         | CSV            | Code                | with output            |
-|--------------------------------------------------------------+----------------+---------------------+------------------------|
-| [[file:HOCKING-graphics-tutorial/figure-CompareAUC-low-res.png]] | [[file:HOCKING-graphics-tutorial/CompareAUC.csv][CompareAUC.csv]] | [[file:HOCKING-graphics-tutorial/figure-CompareAUC.R][figure-CompareAUC.R]] | [[file:HOCKING-graphics-tutorial/figure-CompareAUC.html][figure-CompareAUC.html]] |
-| [[file:HOCKING-graphics-tutorial/figure-SegCost.png]]            | [[file:HOCKING-graphics-tutorial/SegCost.csv][SegCost.csv]]    | [[file:HOCKING-graphics-tutorial/figure-SegCost.R][figure-SegCost.R]]    | [[file:HOCKING-graphics-tutorial/figure-SegCost.html][figure-SegCost.html]]    |
-| [[file:HOCKING-graphics-tutorial/figure-TestError-thumb.png]]    | [[file:HOCKING-graphics-tutorial/TestError.csv][TestError.csv]]  | [[file:HOCKING-graphics-tutorial/figure-TestError.R][figure-TestError.R]]  | [[file:HOCKING-graphics-tutorial/figure-TestError.html][figure-TestError.html]]  |
+| Plot                               | CSV            | Code                | with output            |
+|------------------------------------+----------------+---------------------+------------------------|
+| [[file:figure-CompareAUC-low-res.png]] | [[file:CompareAUC.csv][CompareAUC.csv]] | [[file:figure-CompareAUC.R][figure-CompareAUC.R]] | [[file:figure-CompareAUC.html][figure-CompareAUC.html]] |
+| [[file:figure-SegCost.png]]            | [[file:SegCost.csv][SegCost.csv]]    | [[file:figure-SegCost.R][figure-SegCost.R]]    | [[file:figure-SegCost.html][figure-SegCost.html]]    |
+| [[file:figure-TestError-thumb.png]]    | [[file:TestError.csv][TestError.csv]]  | [[file:figure-TestError.R][figure-TestError.R]]  | [[file:figure-TestError.html][figure-TestError.html]]  |
 
 
